--- a/totp/CMakeLists.txt
+++ b/totp/CMakeLists.txt
@@ -1,7 +1,11 @@
 #FindOpenSSL
 find_package(openssl REQUIRED)
 find_package(CryptoPP REQUIRED)
+find_package(Boost COMPONENTS filesystem)
+
+include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${OPENSSL_INCLUDE_DIR})
+
 message(STATUS "OPENSSL INCLUDE DIR:" ${OPENSSL_INCLUDE_DIR})
 message(STATUS "OPENSSL VERSION:" ${OPENSSL_VERSION})
 message(STATUS "OPENSSL ROOT DIR:" ${OPENSSL_ROOT_DIR})
@@ -12,6 +16,6 @@ link_libraries(commander)
 add_library(totp_object OBJECT ${COMMANDS_SOURCES})
 
 add_executable(totp totp.cpp accounting.cpp encrypt.cpp generator.cpp ${COMMANDS_SOURCES})
-target_link_libraries(totp cryptopp ${OPENSSL_LIBRARIES})
+target_link_libraries(totp cryptopp ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
 
 install(TARGETS totp RUNTIME DESTINATION "${CMAKE_BINARY_DIR}/bin")
